concord_macros/tests/trybuild/fail/rust_type_errors/removed_transport_api.stderr
error[E0432]: unresolved imports `concord_core::advanced::DefaultTransport`, `concord_core::advanced::ReqwestTransport`, `concord_core::advanced::Transport`
 --> tests/trybuild/fail/rust_type_errors/removed_transport_api.rs:1:30
  |
1 | use concord_core::advanced::{DefaultTransport, ReqwestTransport, Transport};
  |                              ^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^  ^^^^^^^^^ no `Transport` in `advanced`
  |                              |                 |
  |                              |                 no `ReqwestTransport` in `advanced`
  |                              no `DefaultTransport` in `advanced`

error[E0107]: struct takes 1 generic argument but 2 generic arguments were supplied
  --> tests/trybuild/fail/rust_type_errors/removed_transport_api.rs:18:19
   |
18 |     let _: Option<ApiClient<Cx, DefaultTransport>> = None;
   |                   ^^^^^^^^^   ------------------ help: remove the unnecessary generic argument
   |                   |
   |                   expected 1 generic argument
   |
note: struct defined here, with 1 generic parameter: `Cx`
  --> $WORKSPACE/concord_core/src/client/api.rs
   |
   | pub struct ApiClient<Cx: ClientContext> {
   |            ^^^^^^^^^ --

error[E0599]: no associated function or constant named `with_transport` found for struct `ApiClient<Cx>` in the current scope
  --> tests/trybuild/fail/rust_type_errors/removed_transport_api.rs:19:30
   |
19 |     let _ = ApiClient::<Cx>::with_transport((), (), ReqwestTransport::new());
   |                              ^^^^^^^^^^^^^^ associated function or constant not found in `ApiClient<Cx>`
   |
note: if you're trying to build a new `ApiClient<Cx>` consider using one of the following associated functions:
      ApiClient::<Cx>::new
      ApiClient::<Cx>::with_reqwest_builder
      ApiClient::<Cx>::with_reqwest_builder_fallible
      ApiClient::<Cx>::with_safe_reqwest_builder
      ApiClient::<Cx>::with_safe_reqwest_builder_fallible
  --> $WORKSPACE/concord_core/src/client/api.rs
   |
   |       pub fn new(vars: Cx::Vars, auth_vars: Cx::AuthVars) -> Self {
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
   | /     pub fn with_reqwest_builder(
   | |         vars: Cx::Vars,
   | |         auth_vars: Cx::AuthVars,
   | |         configure: impl FnOnce(
   | |             crate::transport::SafeReqwestBuilder,
   | |         ) -> crate::transport::SafeReqwestBuilder,
   | |     ) -> Result<Self, crate::transport::ReqwestClientBuildError> {
   | |________________________________________________________________^
...
   | /     pub fn with_reqwest_builder_fallible(
   | |         vars: Cx::Vars,
   | |         auth_vars: Cx::AuthVars,
   | |         configure: impl FnOnce(
...  |
   | |         >,
   | |     ) -> Result<Self, crate::transport::ReqwestClientBuildError> {
   | |________________________________________________________________^
...
   | /     pub fn with_safe_reqwest_builder(
   | |         vars: Cx::Vars,
   | |         auth_vars: Cx::AuthVars,
   | |         configure: impl FnOnce(
   | |             crate::transport::SafeReqwestBuilder,
   | |         ) -> crate::transport::SafeReqwestBuilder,
   | |     ) -> Result<Self, crate::transport::ReqwestClientBuildError> {
   | |________________________________________________________________^
...
   | /     pub fn with_safe_reqwest_builder_fallible(
   | |         vars: Cx::Vars,
   | |         auth_vars: Cx::AuthVars,
   | |         configure: impl FnOnce(
...  |
   | |         >,
   | |     ) -> Result<Self, crate::transport::ReqwestClientBuildError> {
   | |________________________________________________________________^
